--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //用于对数据库进行操作
+    implementation 'org.litepal.android:core:1.4.1'
+    //用于进行网络请求
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    //用于JSON解析
+    implementation 'com.google.code.gson:gson:2.8.2'
+    //用于加载和展示图片
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
