--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coolweather">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
     android:name="org.litepal.LitePalApplication"
+    android:usesCleartextTraffic="true"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
